2.1.0/_sources/gallery/mplot3d/contourf3d.rst.txt


.. _sphx_glr_gallery_mplot3d_contourf3d.py:


===============
Filled contours
===============

contourf differs from contour in that it creates filled contours, ie.
a discrete number of colours are used to shade the domain.

This is like a contourf plot in 2D except that the shaded region corresponding
to the level c is graphed on the plane z=c.




.. image:: /gallery/mplot3d/images/sphx_glr_contourf3d_001.png
    :align: center





.. code-block:: python


    from mpl_toolkits.mplot3d import axes3d
    import matplotlib.pyplot as plt
    from matplotlib import cm

    fig = plt.figure()
    ax = fig.gca(projection='3d')
    X, Y, Z = axes3d.get_test_data(0.05)

    cset = ax.contourf(X, Y, Z, cmap=cm.coolwarm)

    ax.clabel(cset, fontsize=9, inline=1)

    plt.show()

**Total running time of the script:** ( 0 minutes  0.036 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: contourf3d.py <contourf3d.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: contourf3d.ipynb <contourf3d.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
